--- a/templates/baseJoc.html.twig
+++ b/templates/baseJoc.html.twig
@@ -42,7 +42,7 @@
             </li>
             <li><a id="entrenamentBtn" class="buttonStart list-group-item" href="#">Entrenament</a></li>
             <li><a id="rankingBtn" class="buttonStart list-group-item" href="#">Rànquing</a></li>
-            <li><a id="settingsBtn" class="buttonStart list-group-item" href="#">Configuració</a></li>
+            <li><a id="perfilBtn" class="buttonStart list-group-item" href="#">Perfil</a></li>
             <li><a id="sortirElement" class="buttonStart list-group-item" href="#">Sortir</a></li>
         </ul>
 
