--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
         {% block javascriptsTop %}
         <script src="{{ asset('js/jquery.js') }}"></script>    
         <script src="{{ asset('js/popper.js') }}"></script> 
+        <script src="{{ asset('js/damnhx.js') }}"></script>
         <script src="{{ asset('bootstrap4/js/bootstrap.min.js') }}"></script>
         <script type="text/javascript" src="{{ asset('Datatables/datatables.min.js') }}"></script>     
         {% endblock %}
