--- a/templates/grup/afegirnivell.html.twig
+++ b/templates/grup/afegirnivell.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
 
 <div class="padding">
+
+<a href='{{path('grups')}}' id='tornarAGrupsBtn' class='nodeco'><i class="fas fa-chevron-left"></i> Tornar a grups</a>
+
 <h1 class="afegirTitle">Afegir nivell</h1>
 
 <form id="afegirnivell" class="afegirForm" action="" method="POST">
