--- a/templates/grup/llistatalumnes.html.twig
+++ b/templates/grup/llistatalumnes.html.twig
@@ -12,6 +12,7 @@
 
     <div class="alumnes">
 
+    <a href='{{path('grups')}}' id='tornarAGrupsBtn' class='nodeco llistatalumnes'><i class="fas fa-chevron-left"></i> Tornar a grups</a>
     <a href='#' class="btn btn-success float-right afegirbtn" id="afegirAlumneBtn"><i class="fas fa-plus link-white mr-2"></i>Afegir alumne</a>
 
     <div class="llegenda-taula">
