--- a/templates/grup/afegir.html.twig
+++ b/templates/grup/afegir.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
 
 <div class="padding">
+
+<a href='{{path('grups')}}' id='tornarAGrupsBtn' class='nodeco'><i class="fas fa-chevron-left"></i> Tornar a grups</a>
+
 <h1 class="afegirTitle">Afegir grup</h1>
 
 <form id="afegirgrup" class="afegirForm" action="" method="POST">
@@ -33,7 +36,11 @@
         $("#afegirgrup div:nth-child(4)").css({
             "width": "50%",
             "float": "left",
-        })
+        });
+
+        $("#grup_datainici_date_year, #grup_datafinal_date_year").val(getCurrentYear());
+        $("#grup_datainici_date_month, #grup_datafinal_date_month").val(getCurrentMonth());
+        $("#grup_datainici_date_day, #grup_datafinal_date_day").val(getCurrentDay());
     })
 
 </script>
