--- a/templates/partida/inici.html.twig
+++ b/templates/partida/inici.html.twig
@@ -1,6 +1,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+
+        <title>{{title}}</title>
+
         {% block stylesheets %}
             <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
             <link rel="stylesheet" href="{{ asset('bootstrap4/css/bootstrap.min.css') }}"/>  
