--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{{ asset('css/joc.css') }}">
     <script src="{{ asset('js/jquery.js') }}"></script>    
     <script src="{{ asset('js/popper.js') }}"></script> 
+    <script src="{{ asset('js/damnhx.js') }}"></script>
+    <script src="{{ asset('js/joctrivial.js') }}"></script>
     <script src="{{ asset('bootstrap4/js/bootstrap.min.js') }}"></script>
 </head>
 <body>
