--- a/templates/partida/inici.html.twig
+++ b/templates/partida/inici.html.twig
@@ -81,7 +81,7 @@
     $(".partidaBtnGrup").click(function() {
 
         var grup = this.id;
-        var url = "{{ path('getPartidaPortait') }}"
+        var url = "{{ path('getPartidaPortait') }}";
         var codes;
 
         $.post(url, { 'grup': grup}) 
@@ -96,6 +96,12 @@
     $("#entrenamentBtn").click(function() {
 
         asActive("#entrenamentBtn");
+
+        var url = "{{ path('getEntrenamentPortait') }}";
+        $.post(url) 
+		    .done(function(response) {
+                $("#contingutStart").html(response);
+			});
 
     });
 
