Little fix table vertical align amb JS resize

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1295,6 +1295,11 @@ input[type=password] {
 		height: 220px;
 	}
 
+	.carousel-inner  {
+		min-height: 0px!important;
+		height: 100%;
+	}
+
 	#titleMultijugador, #grupMultijugador {
 		text-align: center;
 	}
