--- a/templates/partida/board.html.twig
+++ b/templates/partida/board.html.twig
@@ -2,10 +2,10 @@
         <img class="board-img" src="{{ asset('img/nuevooo.png') }}" alt="">
         <div class="caselles">
           <!-- BOTON CENTRAL-->
-          <div class="box-start casilla"></div>
+          <div id="box-start" class="casilla"></div>
                <div class="box-start-parpadeo"></div>
           <!-- BARRA SUPERIOR DERECHA-->
-          <div class="box1 casilla"></div>
+          <div id="box1" class="casilla"></div>
                 <div class="box1-parpadeo parpadeo-active"></div>   
           <div class="box2 casilla"></div>
                 <div class="box2-parpadeo"></div> 
