Arreglats urls javascript

--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -13,6 +13,14 @@
     <script src="{{ asset('js/damnhx.js') }}"></script>
     <script src="{{ asset('js/joctrivial.js') }}"></script>
     <script src="{{ asset('bootstrap4/js/bootstrap.min.js') }}"></script>
+
+    <script>
+    
+    getJugadorNomUrl = '{{getJugadorNomUrl}}';
+
+    </script>
+
+
 </head>
 <body>
   <div class="left-side col-2">
