--- a/templates/partida/board.html.twig
+++ b/templates/partida/board.html.twig
@@ -3,164 +3,103 @@
         <div class="caselles">
           <!-- BOTON CENTRAL-->
           <div id="box-start" class="casilla"></div>
-               <div class="box-start-parpadeo"></div>
           <!-- BARRA SUPERIOR DERECHA-->
-          <div id="box1" class="casilla"></div>
-                <div class="box1-parpadeo parpadeo-active"></div>   
-          <div class="box2 casilla"></div>
-                <div class="box2-parpadeo"></div> 
-          <div class="box3 casilla"></div>
-                <div class="box3-parpadeo"></div> 
-          <div class="box4 casilla"></div>
-                <div class="box4-parpadeo"></div> 
-          <div class="box5 casilla"></div>
-                <div class="box5-parpadeo"></div> 
+          <div id="box1" class="casilla"></div>   
+          <div id="box2" class="casilla"></div>
+          <div id="box3" class="casilla"></div>
+          <div id="box4" class="casilla"></div>
+          <div id="box5" class="casilla"></div>
           <!-- FIN BARRA SUPERIOR DERECHA-->
 
          <!-- CIRCULO EXTERIOR-->
 
          <!-- parte superior derecha-->
-          <div class="box6 casilla"></div>
-                <div class="box6-parpadeo"></div> 
+          <div id="box6" class="casilla"></div>
                 <div class="box6-icono"><i class="fas fa-star"></i></div> 
-          <div class="box7 casilla"></div>
-                <div class="box7-parpadeo"></div> 
-          <div class="box8 casilla"></div>
-                <div class="box8-parpadeo"></div> 
-          <div class="box9 casilla"></div>
-                <div class="box9-parpadeo"></div> 
-          <div class="box10 casilla"></div>
-                <div class="box10-parpadeo"></div> 
-          <div class="box11 casilla"></div>
-                <div class="box11-parpadeo"></div> 
-          <div class="box12 casilla"></div>
-                <div class="box12-parpadeo"></div> 
-          <div class="box13 casilla"></div>
-                <div class="box13-parpadeo"></div> 
+          <div id="box7" class="casilla"></div>
+          <div id="box8" class="casilla"></div> 
+          <div id="box9" class="casilla"></div>
+          <div id="box10" class="casilla"></div> 
+          <div id="box11" class="casilla"></div>
+          <div id="box12" class="casilla"></div>
+          <div id="box13" class="casilla"></div>
                 <div class="box13-icono"><i class="fas fa-star"></i></div> 
         <!-- fin parte superior derecha-->
 
           <!--parte derecha inferior-->
-          <div class="box14 casilla casilla"></div>
-                <div class="box14-parpadeo"></div> 
-          <div class="box15 casilla casilla"></div>
-                <div class="box15-parpadeo"></div> 
-          <div class="box16 casilla casilla"></div>
-                <div class="box16-parpadeo"></div> 
-          <div class="box17 casilla casilla"></div>
-                <div class="box17-parpadeo"></div> 
-          <div class="box18 casilla casilla"></div>
-                <div class="box18-parpadeo"></div>
-          <div class="box19 casilla casilla"></div>
-                  <div class="box19-parpadeo"></div> 
-          <div class="box20 casilla casilla"></div>
-                  <div class="box20-parpadeo"></div>
+          <div id="box14" class="casilla"></div>
+          <div id="box15" class="casilla"></div>
+          <div id="box16" class="casilla"></div>
+          <div id="box17" class="casilla"></div>
+          <div id="box18" class="casilla"></div>
+          <div id="box19" class="casilla"></div>
+          <div id="box20" class="casilla"></div>
                   <div class="box20-icono"><i class="fas fa-star"></i></div>  
                <!-- fin parte derecha inferior-->
 
              <!--parte izquierda inferior-->
-             <div class="box21 casilla"></div>
-                  <div class="box21-parpadeo"></div> 
-             <div class="box22 casilla"></div>
-                  <div class="box22-parpadeo"></div> 
-             <div class="box23 casilla"></div>
-                  <div class="box23-parpadeo"></div> 
-             <div class="box24 casilla"></div>
-                  <div class="box24-parpadeo"></div> 
-             <div class="box25 casilla"></div>
-                  <div class="box25-parpadeo"></div> 
-             <div class="box26 casilla"></div>
-                  <div class="box26-parpadeo"></div> 
-             <div class="box27 casilla"></div>
-                  <div class="box27-parpadeo"></div> 
+             <div id="box21" class="casilla"></div>
+             <div id="box22" class="casilla"></div>
+             <div id="box23" class="casilla"></div>
+             <div id="box24" class="casilla"></div>
+             <div id="box25" class="casilla"></div>
+             <div id="box26" class="casilla"></div>
+             <div id="box27" class="casilla"></div>
                   <div class="box27-icono"><i class="fas fa-star"></i></div> 
            <!--fin parte izquierda inferior-->
-
+     <!--SEGUIR POR AQUI-->
              <!-- parte izquierda superior -->
-             <div class="box28 casilla"></div>
-                  <div class="box28-parpadeo"></div> 
-             <div class="box29 casilla"></div>
-                  <div class="box29-parpadeo"></div> 
-             <div class="box30 casilla"></div>
-                  <div class="box30-parpadeo"></div> 
-             <div class="box31 casilla"></div>
-                  <div class="box31-parpadeo"></div> 
-             <div class="box32 casilla"></div>
-                  <div class="box32-parpadeo"></div> 
-             <div class="box33 casilla"></div>
-                  <div class="box33-parpadeo"></div> 
-             <div class="box34 casilla"></div>
-                  <div class="box34-parpadeo"></div> 
+             <div id="box28" class="casilla"></div>
+             <div id="box29" class="casilla"></div>
+             <div id="box30" class="casilla"></div>
+             <div id="box31" class="casilla"></div>
+             <div id="box32" class="casilla"></div>
+             <div id="box33" class="casilla"></div>
+             <div id="box34" class="casilla"></div>
                   <div class="box34-icono"><i class="fas fa-star"></i></div> 
               <!-- fin parte izquierda superior -->
 
              <!-- parte superior-->
-             <div class="box35 casilla"></div>
-                  <div class="box35-parpadeo"></div> 
-             <div class="box36 casilla"></div>
-                  <div class="box36-parpadeo"></div> 
-             <div class="box37 casilla"></div>
-                  <div class="box37-parpadeo"></div> 
-             <div class="box38 casilla"></div>
-                  <div class="box38-parpadeo"></div> 
-             <div class="box39 casilla"></div>
-                  <div class="box39-parpadeo"></div> 
-             <div class="box40 casilla"></div>
-                  <div class="box40-parpadeo"></div> 
+             <div id="box35" class="casilla"></div>
+             <div id="box36" class="casilla"></div>
+             <div id="box37" class="casilla"></div>
+             <div id="box38" class="casilla"></div>
+             <div id="box39" class="casilla"></div>
+             <div id="box40" class="casilla"></div>
              <!-- fin parte superior-->
 
            <!--FIN CIRCULO EXTERIOR--> 
            
                <!-- BARRA SUPERIOR IZQUIERDA-->
-          <div class="box41 casilla"></div>
-                <div class="box41-parpadeo"></div>
-          <div class="box42 casilla"></div>
-                <div class="box42-parpadeo"></div> 
-          <div class="box43 casilla"></div>
-                <div class="box43-parpadeo"></div> 
-          <div class="box44 casilla"></div>
-                <div class="box44-parpadeo"></div> 
-          <div class="box45 casilla"></div>
-                <div class="box45-parpadeo"></div> 
+          <div id="box41" class="casilla"></div>
+          <div id="box42" class="casilla"></div>
+          <div id="box43" class="casilla"></div>
+          <div id="box44" class="casilla"></div>
+          <div id="box45" class="casilla"></div>
           <!-- FIN BARRA SUPERIOR IZQUIERDA--> 
 
                <!-- BARRA IZQUIERDA-->
-               <div class="box46 casilla"></div>
-                    <div class="box46-parpadeo"></div> 
-               <div class="box47 casilla"></div>
-                    <div class="box47-parpadeo"></div> 
-               <div class="box48 casilla"></div>
-                    <div class="box48-parpadeo"></div> 
-               <div class="box49 casilla"></div>
-                    <div class="box49-parpadeo"></div> 
-               <div class="box50 casilla"></div>
-                    <div class="box50-parpadeo"></div> 
+               <div id="box46" class="casilla"></div>
+               <div id="box47" class="casilla"></div>
+               <div id="box48" class="casilla"></div>
+               <div id="box49" class="casilla"></div>
+               <div id="box50" class="casilla"></div>
                <!-- FIN BARRA IZQUIERDA--> 
 
                   <!-- BARRA DERECHA-->
-                  <div class="box51 casilla"></div>
-                          <div class="box51-parpadeo"></div>
-                  <div class="box52 casilla"></div>
-                          <div class="box52-parpadeo"></div> 
-                  <div class="box53 casilla"></div>
-                        <div class="box53-parpadeo"></div> 
-                  <div class="box54 casilla"></div>
-                        <div class="box54-parpadeo"></div> 
-                  <div class="box55 casilla"></div>
-                        <div class="box55-parpadeo"></div> 
+                  <div id="box51" class="casilla"></div>
+                  <div id="box52" class="casilla"></div>
+                  <div id="box53" class="casilla"></div>
+                  <div id="box54" class="casilla"></div>
+                  <div id="box55" class="casilla"></div>
                   <!-- FIN BARRA DERECHA--> 
 
                    <!-- BARRA INFERIOR-->
-                   <div class="box56 casilla"></div>
-                          <div class="box56-parpadeo"></div> 
-                   <div class="box57 casilla"></div>
-                          <div class="box57-parpadeo"></div> 
-                   <div class="box58 casilla"></div>
-                          <div class="box58-parpadeo"></div> 
-                   <div class="box59 casilla"></div>
-                          <div class="box59-parpadeo"></div> 
-                   <div class="box60 casilla"></div>
-                          <div class="box60-parpadeo"></div> 
+                   <div id="box56" class="casilla"></div>
+                   <div id="box57" class="casilla"></div>
+                   <div id="box58" class="casilla"></div>
+                   <div id="box59" class="casilla"></div>
+                   <div id="box60" class="casilla"></div> 
                    <!-- FIN BARRA INFERIOR--> 
             </div>
     </div>
