--- a/public/css/joc.css
+++ b/public/css/joc.css
@@ -597,19 +597,19 @@ button:focus {
 
 @keyframes parpadeo{
     0%{
-        opacity: 1;
+        opacity: 0.8;
     }
     25%{
         opacity: 0;
     }
     50% {
-        opacity: 1;
+        opacity: 0.8;
     }
     75% {
         opacity: 0;
     }
     100%{
-        opacity: 1;
+        opacity: 0.8;
     }
 }
 
@@ -646,6 +646,8 @@ button:focus {
     cursor: pointer;
     background-color: white;
     pointer-events: auto!important;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px white;
 }
 
 
