--- a/templates/partida/inici.html.twig
+++ b/templates/partida/inici.html.twig
@@ -59,7 +59,7 @@
     </div>
 
     <div class="backgroundRotate">
-        <img src="img/bgrotate.png"/>
+        <img src="{{asset('img/bgrotate.png')}}"/>
     </div>
 
     <script>
