--- a/templates/grup/afegir.html.twig
+++ b/templates/grup/afegir.html.twig
@@ -6,7 +6,7 @@
 
 <div class="padding">
 
-<a href='{{path('grups')}}' id='tornarAGrupsBtn' class='nodeco'><i class="fas fa-chevron-left"></i> Tornar a grups</a>
+<a href='{{path('grups')}}' id='tornarAGrupsBtn' class='tornarBdcmBtn nodeco'><i class="fas fa-chevron-left"></i> Tornar a grups</a>
 
 <h1 class="afegirTitle">Afegir grup</h1>
 
