--- a/templates/nivell/afegir.html.twig
+++ b/templates/nivell/afegir.html.twig
@@ -6,11 +6,11 @@
 
 <div class="padding">
 
-<a href='{{path('grups')}}' id='tornarAGrupsBtn' class='tornarBdcmBtn nodeco'><i class="fas fa-chevron-left"></i> Tornar a grups</a>
+<a href='{{path('nivells')}}' id='tornarANivellsBtn' class='tornarBdcmBtn nodeco'><i class="fas fa-chevron-left"></i> Tornar a nivells</a>
 
-<h1 class="afegirTitle">Afegir nivell</h1>
+<h1 class="afegirTitle">Afegir Tema</h1>
 
-<form id="afegirnivell" class="afegirForm" action="" method="POST">
+<form id="afegirTema" class="afegirForm" action="" method="POST">
 
 <!-- id	nom	-->
 
@@ -18,7 +18,7 @@
         
         {{ form_row(form.nom) }}
 
-        <input class="btn btn-info" type="submit" name="Submit" value="Afegir nivell" />
+        <input class="btn btn-info" type="submit" name="Submit" value="Afegir tema" />
 
     {{ form_end(form, {'render_rest': false}) }}
 </div>
