--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,7 @@
                 <ul id="menuList">
                     <li class="{% if app.request.attributes.get('_route') == 'inici' %}active{% endif %}"><a href="{{ path('inici') }}"><i class="fas fa-home mr-2"></i>INICI</a></li>
                     <li class="{% if app.request.attributes.get('_route') == 'grups' or app.request.attributes.get('_route') == 'alumnesGrup' %}active{% endif %}"><a href="{{ path('grups') }}"><i class="fas fa-sitemap mr-2"></i>GRUPS</a></li>
+                    <li class="{% if app.request.attributes.get('_route') == 'nivells' %}active{% endif %}"><a href="{{ path('nivells') }}"><i class="fas fa-layer-group mr-2"></i>NIVELLS</a></li>
                     <li class="{% if app.request.attributes.get('_route') == 'usuaris' %}active{% endif %}"><a href="{{ path('usuaris') }}"><i class="fas fa-users mr-2"></i>USUARIS</a></li>
                     <li><a href="#"><i class="fas fa-trophy mr-2"></i>PARTIDES</a></li>
                     <li><a href="#"><i class="fas fa-graduation-cap mr-2"></i>ENTRENAMENTS</a></li>
