--- a/templates/grup/index.html.twig
+++ b/templates/grup/index.html.twig
@@ -12,8 +12,8 @@
 
     <div class="grups">
 
-    <a href='{{path('afegirgrup')}}' id='afegirGrupb' class="btn btn-success float-right afegirbtn"><i class="fas fa-plus link-white mr-2"></i>Afegir grup</a>
-    <a href='{{path('afegirnivell')}}' id='afegirNivellb' class="btn btn-success float-right afegirbtn"><i class="fas fa-plus link-white mr-2"></i>Afegir nivell</a>
+    <a href='{{path('afegirgrup')}}' id='afegirGrupb' class="btn btn-success float-right afegirbtn"><i class="fas fa-plus link-white mr-2"></i>Afegir grup</a>-
+    <!--<a href='{{path('afegirnivell')}}' id='afegirNivellb' class="btn btn-success float-right afegirbtn"><i class="fas fa-plus link-white mr-2"></i>Afegir nivell</a>-->
 
     <div class="llegenda-taula">
     
