--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1326,7 +1326,7 @@ input[type=password] {
 	text-align: center;
 }
 
-#canviModeAccept, #canviModeDeny {
+#canviModeAccept, #canviModeDeny, #desvincularAccept, #desvincularDeny {
 	width: 75px;
 }
 
