--- a/templates/partida/inici.html.twig
+++ b/templates/partida/inici.html.twig
@@ -45,8 +45,8 @@
             </li>
             <li><a id="entrenamentBtn" class="buttonStart list-group-item" href="#">Entrenament</a></li>
             <li><a id="rankingBtn" class="buttonStart list-group-item" href="#">Rànquing</a></li>
-            <li><a id="perfilBtn" class="buttonStart list-group-item" href="#">Perfil</a></li>
-            <li><a id="sortirElement" class="buttonStart list-group-item" href="#">Sortir</a></li>
+            <li><a id="perfilBtn" class="buttonStart list-group-item" href="{{ path('fos_user_profile_edit') }}">Perfil</a></li>
+            <li><a id="sortirElement" class="buttonStart list-group-item" href="{{ path('fos_user_security_logout') }}">Sortir</a></li>
         </ul>
 
         <div id="diagonalColorStart"></div>
